--- a/node-lab-website/express/index.html
+++ b/node-lab-website/express/index.html
@@ -95,6 +95,7 @@
         <h2 class="w3-wide w3-center">TOUR DATES</h2>
         <p class="w3-opacity w3-center"><i>Remember to book your tickets!</i></p><br>
 
+        <!-- Button that hides and shows "Sold Out" months -->
         <button id="toggleButton" class="w3-button w3-blue w3-margin-bottom">Hide Sold Out</button>
         <ul class="w3-ul w3-border w3-white w3-text-grey">
             <li class="w3-padding MY_LI_CLASS">September <span class="w3-tag w3-red w3-margin-left">Sold out</span></li>
